# one-country-a-day

./: README.md  pyproject.toml
app/: config.py  data.py  main.py  openai_interface.py  prompt.txt
app/views/: index.html
