[tool.poetry]
name = "one-country-a-day"
version = "0.1.0"
description = "A little app to get an AI-generated short description of a country each day"
authors = ["Ant <anthony.hillairet@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
openai = "^1.11.0"
Jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
